# src/routes.go
@@ -13,16 +13,13 @@ import (
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
 
-
-
-
-func Router(config config.BaseConfig, logger *logger.Logger, db *sql.DB) *gin.Engine  {
+func Router(config config.BaseConfig, logger *logger.Logger, db *sql.DB) *gin.Engine {
 	r := gin.Default()
 
 	r.GET(fmt.Sprintf("%s/health", config.API_VERSION), func(c *gin.Context) {
 		c.JSON(http.StatusOK, map[string]string{
 			"version": "1.0.1",
-			"status": "alive",
+			"status":  "alive",
 		})
 	})
 
@@ -32,15 +29,14 @@ func Router(config config.BaseConfig, logger *logger.Logger, db *sql.DB) *gin.En
 	url := ginSwagger.URL("/internal/openapi/openapi.yaml") // Points to the static route
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler, url))
 
-
-
 	// User auth routes
 	api := r.Group(config.API_VERSION)
 	{
-		authentication:= api.Group("/auth") 
+		authentication := api.Group("/auth")
 		{
 			a := auth.AuthDep{Logger: logger, Config: &config, DB: db}
 			authentication.POST("/signup", a.RegisterUser)
+			authentication.POST("/signin", a.SignInUser)
 		}
 	}
 	return r
